# tiktok-trend-hunter

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
.actor/: README.md  actor.json  input_schema.json  output_schema.json
src/: __main__.py
src/tiktok_trend_hunter/: __init__.py  analyzer.py  main.py  models.py  scraper.py
tests/: __init__.py  test_models.py  test_scraper.py
