[project]
name = "tiktok-trend-hunter"
version = "0.1.0"
description = "TikTok Shop Viral Product Finder & AI Analyzer - An Apify Actor that finds, analyzes, and scores viral products for e-commerce sellers"
authors = [
    {name = "Firas Mosbahi"}
]
requires-python = "^3.11"
dependencies = [
    "apify (>=3.2.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "anthropic (>=0.79.0,<0.80.0)",
    "openai (>=2.21.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
